# dbus-task

./: .gitignore  Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.status  configure  configure.ac  configure.scan  example.c  log.txt  logger.c  test.c  test.conf
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
dbus_pam/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  dbus_echo  dbus_echo.c  libpam_ignore.la  libpam_ignore_la-logger.lo  libpam_ignore_la-test_pam.lo  libtest.la  libtool  logger.c  logger.h  test_pam.c
dbus_pam/.deps/: dbus_echo.Po  libpam_ignore_la-logger.Plo  libpam_ignore_la-test_pam.Plo  libtest_la-test_pam.Plo  logger.Po
dbus_pam/.libs/: libpam_ignore.la  libpam_ignore.lai  libpam_ignore.so.0  libpam_ignore.so.0.0.0
dbus_pam/autom4te.cache/: output.0  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
